--- a/rest-service/backend/taskmanager/app/views/index.scala.html
+++ b/rest-service/backend/taskmanager/app/views/index.scala.html
@@ -1,31 +1,51 @@
 @(tasks: List[Task], taskForm: Form[Task])
+@implicitFieldConstructor = @{ helper.FieldConstructor(twitterBootstrapInput.render) }
 
 @import helper._
 
 @main("Todo list") {
+
+	<div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container-fluid">
+                <a id="titleLink" class="brand" href="/">TASK MANAGER</a>
+            </div>
+        </div>
+    </div>
     
-    <h1>@tasks.size() task(s)</h1>
+    <div class="container">
+        <ul id="tasks"></ul>
+        
+        <h1>@tasks.size() task(s)</h1>
     
-    <ul>
-        @for(task <- tasks) {
-            <li>
-                @task.label
-                
-                @form(routes.Application.deleteTask(task.id)) {
-                    <input type="submit" value="Delete">
-                }
-            </li>
+	    <ul>
+	        @for(task <- tasks) {
+	            <li>
+	                @task.label
+	                
+	                @form(routes.Application.deleteTask(task.id)) {
+	                    <input type="submit" value="Delete" class="btn btn-mini btn-danger">
+	                }
+	            </li>
+	        }
+	    </ul>
+	    
+	    <h2>Add a new task</h2>
+    
+	    @form(routes.Application.newTask(), 'class -> "well form-horizontal") {
+	        @inputText(taskForm("label")) 
+	        
+	        <input type="submit" value="Create" class="btn btn-primary">
+	    }
+
+		@*
+        @helper.form(action = routes.Application.addTask(), 'class -> "well form-horizontal") {
+            @helper.inputText(taskForm("contents"), '_label -> "Contents")
+            <div class="controls">
+                <input type="submit" class="btn btn-primary"/>
+            </div>
         }
-    </ul>
-    
-    <h2>Add a new task</h2>
-    
-    @form(routes.Application.newTask()) {
-        
-        @inputText(taskForm("label")) 
-        
-        <input type="submit" value="Create">
-        
-    }
+        *@
+    </div>
     
 }
