--- a/rest-service/backend/taskmanager/app/views/index.scala.html
+++ b/rest-service/backend/taskmanager/app/views/index.scala.html
@@ -8,7 +8,7 @@
 	<div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container-fluid">
-                <a id="titleLink" class="brand" href="/">TASK MANAGER</a>
+                <a id="titleLink" class="brand" href="/"><i class="icon-tasks icon-white"></i> TASK MANAGER</a>
             </div>
         </div>
     </div>
