Initial import of donut-shaped rotating graph

--- a/graphs/dynamic-graph/res/layout/main.xml
+++ b/graphs/dynamic-graph/res/layout/main.xml
@@ -10,9 +10,30 @@
             android:id="@+id/chart"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:background="#444"
             android:padding="16dp"/>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center" >
+        <Button
+            android:id="@+id/button1"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="set 1" />
+        <Button
+                android:id="@+id/button2"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="set 2" />
+        <Button
+                android:id="@+id/button3"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="random set" />
+    </LinearLayout>
     <TextView
             android:layout_width="fill_parent"
             android:layout_height="0dp"
